# tee-iam

./: .clang-format  CMakeLists.txt  README.md  azure-pipelines.yml  build.sh  build.sh~  docker-compose.yml  run.sh  run_test.sh  testreq.txt
App/: App.cpp  App.h  MailSender.cpp  MailSender.h  OCalls.cpp
App/Comm/: httplib.h  sgx-httplib.h
Common/: Types.h
Docker/: Dockerfile  Dockerfile_DEV  Dockerfile_PROD
Docker/base/: Dockerfile_DEV  Dockerfile_PROD  build-wolfssl.sh  build.sh  entrypoint.sh
Enclave/: CertKeyStorage.hpp  Enclave.config.xml  Enclave.cpp  Enclave.edl  Enclave.h  HttpHandler.hpp  UsersStorage.hpp  Wolfssl_Enclave.cpp  Wolfssl_Enclave.edl  jsonsgx.hpp  snd_rcv.c
Enclave/Crypto/: Base.h  Crypto.hpp
SecureDBdata/sgx_certs/generate-tls-cert/: generate-tls-cert
cmake/: FindSGX.cmake  FindWolfSSL.cmake
data/keys/: users.keys
